# s3

./: .gitignore  .tasks  CMakeLists.txt  LICENSE.md  README.md  \
include/: s3.hpp
include/s3/: camera.hpp  color.hpp  drawstate.hpp  events.hpp  material.hpp  mesh.hpp  mouse.hpp  renderable.hpp  rendertarget.hpp  rendertexture.hpp  resource.hpp  shader.hpp  surfaceable.hpp  texturable.hpp  texture.hpp  transform.hpp  transformable.hpp  uniformstruct.hpp  vertex.hpp  window.hpp  windowbase.hpp
include/s3/cam/: fixed.hpp  free.hpp  orbital.hpp
include/s3/evt/: data.hpp  emitter.hpp  observer.hpp
include/s3/light/: base.hpp  dir.hpp  directional.hpp  light.hpp  point.hpp  spot.hpp
include/s3/util/: clock.hpp  time.hpp
src/: s3.cpp
src/s3/: camera.cpp  color.cpp  drawstate.cpp  material.cpp  mesh.cpp  mouse.cpp  renderable.cpp  rendertarget.cpp  rendertexture.cpp  resource.cpp  shader.cpp  surfaceable.cpp  texturable.cpp  texture.cpp  transform.cpp  transformable.cpp  uniformstruct.cpp  window.cpp  windowbase.cpp
src/s3/cam/: fixed.cpp  free.cpp  orbital.cpp
src/s3/evt/: data.cpp  emitter.cpp  observer.cpp
src/s3/light/: base.cpp  dir.cpp  light.cpp  point.cpp  spot.cpp
src/s3/util/: clock.cpp  time.cpp
test/: CMakeLists.txt  events.cpp  time.cpp
